# CZT_spectrum_tail

./: CMakeLists.txt  CZTSpectrumTail.cpp  README.md  init_vis.mac  run1.mac  run2.mac  vis.mac
include/: ActionInitialization.h  DetectorConstruction.h  PrimaryGeneratorAction.h  RunAction.h  SteppingAction.h
src/: ActionInitialization.cpp  DetectorConstruction.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  SteppingAction.cpp
